# mojtaba_emulator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  emulator.cpp  emulator.h  main.cpp
SimulatedWindows/Ucrtbase/: ucrtbase32Sim.cpp  ucrtbase32Sim.hpp
SimulatedWindows/kernel32/: Kernel32Sim.cpp  Kernel32Sim.h  Kernel32Sim.hpp
SimulatedWindows/user32/: user32Sim.cpp  user32Sim.hpp
headers/: DllEnum.h  Emulator.hpp  ImportResolver.hpp  Loader.hpp  PELoader.hpp  SimulatedDispatcher.h  SimulatedDispatcher.hpp  teb_peb_offsets.hpp
lib/: unicorn.lib
lib/pkgconfig/: unicorn.pc
notes/: 01-Project-Overview.md  02-Build-System-and-Dependencies.md  03-Core-Data-Structures.md  04-ProcessLoader-Class.md  05-Emulator-Class.md  06-Utility-Components.md
src/: Disassembler.cpp  Emulator.cpp  ImportResolver.cpp  Loader.cpp  Logger.cpp  PELoader.cpp  SimulatedDispatcher.cpp  main.cpp  teb_peb_offsets.cpp
